--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,17 +13,15 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --primary: 10, 0, 65;
+    --secondary: 255, 153, 0;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base{
+  body{
+    @apply bg-gradient-main bg-fixed text-secondary text-lg
+  }
 }
 
 @layer utilities {
